--- a/About-Us.html
+++ b/About-Us.html
@@ -34,7 +34,8 @@
             padding: 1%;
             align-items: center;
             justify-content: space-between;
-            background: linear-gradient(90deg, rgb(119 115 197 / 72%) 0%, rgb(89 89 209) 16%, rgb(16 186 221) 95%);
+            background: linear-gradient(90deg, rgb(119 115 197 / 72%) 0%,
+             rgb(89 89 209) 16%, rgb(16 186 221) 95%);
             border-radius: 2.5rem;
             margin-top: 5%;
         }
@@ -109,7 +110,8 @@
         }
 
         .contener-2-about {
-            background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(9, 79, 121, 1) 55%, rgba(0, 212, 255, 1) 95%);
+            background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%,
+             rgba(9, 79, 121, 1) 55%, rgba(0, 212, 255, 1) 95%);
         }
 
         .flexbaddingabout {
