--- a/Rides.html
+++ b/Rides.html
@@ -45,6 +45,12 @@
             display: block;
         }
 
+        .img-picture3{
+            width: 95%;
+            margin-left: 2.5%;
+            display: block;
+        }
+
         .img-picture img {
             width: 100%;
             border-radius: 2.5rem;
@@ -52,7 +58,12 @@
 
         .img-picture2 img {
             width: 100%;
-            border-radius: 2.5rem;
+            border-radius: 5%;
+        }
+
+        .img-picture3 img{
+            width: 100%;
+            border-radius: 5%;
         }
 
         /* page services */
@@ -649,6 +660,10 @@
 
                 <picture class="img-picture2">
                     <img src="img/pictuer-rides-responsive.png" alt="picture">
+                </picture>
+
+                <picture class="img-picture3">
+                    <img src="img/picture-rieds-responsive-1.png" alt="picture">
                 </picture>
 
                 <section id="rides">
