--- a/submit-car-intro.html
+++ b/submit-car-intro.html
@@ -545,7 +545,7 @@
 
                 <div class="slide-timer fades" style="display: none;">
                     <div class="img-slide-timer">
-                        <img src="img/brandless-moder-car_110488-502.avif" alt="" id="image-timer3">
+                        <img src="img/featured-avatar-click.jpg" alt="" id="image-timer3">
                     </div>
 
                     <div class="slider-timers-word">
@@ -564,7 +564,7 @@
 
                 <div class="slide-timer fades" style="display: none;">
                     <div class="img-slide-timer">
-                        <img src="img/featured-avatar5.jpg" alt="" id="image-timer2">
+                        <img src="img/featured-avatar5.jpeg" alt="" id="image-timer2">
                     </div>
 
                     <div class="slider-timers-word">
@@ -970,7 +970,7 @@
 
             cars[slideCars - 1].style.display = "block";
 
-            // setTimeout(showSlidesTimer, 4000); // Change image every 4 seconds
+            setTimeout(showSlidesTimer, 4000); // Change image every 4 seconds
         }
 
     </script>
