--- a/bootstrap.html
+++ b/bootstrap.html
@@ -778,152 +778,157 @@
 
     </section>
 
-    <div>
-        <p>
-            HTML stands for HyperText Markup Language.
-            It is used to design the web pages. With
-            the help of HTML, you can create a complete
-            website structure. HTML is the combination
-            of Hypertext and Markup language. Hypertext
-            defines the link between the web pages and
-            markup language defines the text document
-            within the tag that define the structure
-            of web pages.
-        </p>
+    <div class="filter-meta">
 
-        <h2 style="text-align: center;" id="css">
-            CSS
-        </h2>
-        <p>
-            CSS (Cascading Style Sheets) is used to
-            styles web pages. Cascading Style Sheets
-            are fondly referred to as CSS. The reason
-            for using this is to simplify the process
-            of making web pages presentable. It allows
-            you to apply styles on web pages. More
-            importantly, it enables you to do this
-            independently of the HTML that makes up
-            each web page.
-        </p>
+        <span class="this-span">style :</span>
 
-        <h2 style="text-align: center;" id="js">
-            JavaScript
-        </h2>
-        <p>
-            JavaScript is a lightweight, cross-platform,
-            single-threaded, and interpreted compiled
-            programming language. It is also known as
-            the scripting language for webpages. It is
-            well-known for the development of web pages,
-            and many non-browser environments also use it.
-            JavaScript is a weakly typed language (
-            dynamically typed). JavaScript can be used
-            for Client-side developments as well as
-            Server-side developments. JavaScript is both
-            an imperative and declarative type of language.
-            JavaScript contains a standard library of
-            objects, like Array, Date, and Math, and a
-            core set of language elements like operators,
-            control structures, and statements.
-        </p>
+        <ul class="row">
 
-        <p>
-            HTML stands for HyperText Markup Language.
-            It is used to design the web pages. With
-            the help of HTML, you can create a complete
-            website structure. HTML is the combination
-            of Hypertext and Markup language. Hypertext
-            defines the link between the web pages and
-            markup language defines the text document
-            within the tag that define the structure
-            of web pages.
-        </p>
+            <div class="col-lg-2 col-md-4 col-sm-6 text-center">
 
-        <h2 style="text-align: center;" id="css">
-            CSS
-        </h2>
-        <p>
-            CSS (Cascading Style Sheets) is used to
-            styles web pages. Cascading Style Sheets
-            are fondly referred to as CSS. The reason
-            for using this is to simplify the process
-            of making web pages presentable. It allows
-            you to apply styles on web pages. More
-            importantly, it enables you to do this
-            independently of the HTML that makes up
-            each web page.
-        </p>
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-1.png" alt="">
+                        <p>micro</p>
+                    </a></li>
 
-        <h2 style="text-align: center;" id="js">
-            JavaScript
-        </h2>
-        <p>
-            JavaScript is a lightweight, cross-platform,
-            single-threaded, and interpreted compiled
-            programming language. It is also known as
-            the scripting language for webpages. It is
-            well-known for the development of web pages,
-            and many non-browser environments also use it.
-            JavaScript is a weakly typed language (
-            dynamically typed). JavaScript can be used
-            for Client-side developments as well as
-            Server-side developments. JavaScript is both
-            an imperative and declarative type of language.
-            JavaScript contains a standard library of
-            objects, like Array, Date, and Math, and a
-            core set of language elements like operators,
-            control structures, and statements.
-        </p>
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-2.png" alt="">
+                        <p>Hatchback</p>
+                    </a></li>
 
-        <p>
-            HTML stands for HyperText Markup Language.
-            It is used to design the web pages. With
-            the help of HTML, you can create a complete
-            website structure. HTML is the combination
-            of Hypertext and Markup language. Hypertext
-            defines the link between the web pages and
-            markup language defines the text document
-            within the tag that define the structure
-            of web pages.
-        </p>
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-3.png" alt="">
+                        <p>Coupe</p>
+                    </a></li>
 
-        <h2 style="text-align: center;" id="css">
-            CSS
-        </h2>
-        <p>
-            CSS (Cascading Style Sheets) is used to
-            styles web pages. Cascading Style Sheets
-            are fondly referred to as CSS. The reason
-            for using this is to simplify the process
-            of making web pages presentable. It allows
-            you to apply styles on web pages. More
-            importantly, it enables you to do this
-            independently of the HTML that makes up
-            each web page.
-        </p>
+            </div>
 
-        <h2 style="text-align: center;" id="js">
-            JavaScript
-        </h2>
-        <p>
-            JavaScript is a lightweight, cross-platform,
-            single-threaded, and interpreted compiled
-            programming language. It is also known as
-            the scripting language for webpages. It is
-            well-known for the development of web pages,
-            and many non-browser environments also use it.
-            JavaScript is a weakly typed language (
-            dynamically typed). JavaScript can be used
-            for Client-side developments as well as
-            Server-side developments. JavaScript is both
-            an imperative and declarative type of language.
-            JavaScript contains a standard library of
-            objects, like Array, Date, and Math, and a
-            core set of language elements like operators,
-            control structures, and statements.
-        </p>
+            <div class="col-lg-2 col-md-4 col-sm-6 text-center">
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-4.png" alt="">
+                        <p>CUV</p>
+                    </a></li>
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-5.png" alt="">
+                        <p>SUV</p>
+                    </a></li>
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-6.png" alt="">
+                        <p>Cabriolet</p>
+                    </a></li>
+
+            </div>
+
+            <div class="col-lg-2 col-md-4 col-sm-6  text-center">
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-7.png" alt="">
+                        <p>Super Car</p>
+                    </a></li>
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-8.png" alt="">
+                        <p>Pickup</p>
+                    </a></li>
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-9.png" alt="">
+                        <p>Van</p>
+                    </a></li>
+
+            </div>
+
+            <div class="col-lg-2 col-md-4 col-sm-6 text-center">
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-10.png" alt="">
+                        <p>Caravan</p>
+                    </a></li>
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-8.png" alt="">
+                        <p>Pickup</p>
+                    </a></li>
+
+                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-9.png" alt="">
+                        <p>Van</p>
+                    </a></li>
+
+            </div>
+
+        </ul>
     </div>
 
+    <div class="filtermeta block-flex">
+
+        <span class="this-span">Additional:</span>
+
+        <form method="post" class="row">
+
+            <div class="col-lg-4 col-md-6 col-sm-9">
+                <label class="checkboxses">ABS
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Cruise control
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Front fog lights
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Alarm
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Electric door mirrors
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-9">
+                <label class="checkboxses"> Heated door mirrors
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Audio remote control
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Electrically drivers seat
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Passenger airbag
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Bluetooth connection
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-9">
+                <label class="checkboxses"> Folding rear seats
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">ear electric windows
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Climate control
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Front electric windows
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+                <label class="checkboxses">Remote central locking
+                    <input type="checkbox">
+                    <span class="checkmark1"></span>
+                </label>
+            </div>
+        </form>
+
+
+    </div>
 
     <section class="blogs-image">
 
